--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:exported="false"
             android:label="@string/title_activity_start_game"
             android:theme="@style/Theme.Capitals.NoActionBar"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="sensorLandscape"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
