--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,17 @@
         android:theme="@style/Theme.Capitals"
         tools:targetApi="31">
         <activity
+            android:name=".EndOfTheGame"
+            android:exported="false" />
+        <activity
             android:name=".Categories"
             android:exported="false" />
         <activity
             android:name=".StartGame"
             android:exported="false"
             android:label="@string/title_activity_start_game"
-            android:theme="@style/Theme.Capitals.NoActionBar"
-            android:screenOrientation="sensorLandscape"/>
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/Theme.Capitals.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
